# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  ru-hexlet-io-courses.html  setup.cfg
.github/workflows/: codecoverage.yml  linter.yml  tests.yml
page-loader/: __init__.py  page_loader.py
page-loader/scripts/: page_loader_script.py
page_loader/: __init__.py  page_loader.py  pl.py  progress_bar.py
page_loader/scripts/: page_loader_script.py
tests/: test_download.py  test_exceptions.py  test_html_download.py  test_img_download.py  test_local_resources_download.py  test_module_functions.py
tests/fixtures/: img_page.html  link_page.html  script_page.html
tests/fixtures/scripts/: app.js
tests/fixtures/styles/: style.css
