[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Web-page downloading tool."
authors = ["eugenenazirov"]
packages = [
  { include = "page-loader" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
